de-active user with 0 balance

--- a/frontend/src/app/layout/user/add-user/add-user.component.html
+++ b/frontend/src/app/layout/user/add-user/add-user.component.html
@@ -48,7 +48,7 @@
 
         <mat-form-field>
             <mat-label>Balance</mat-label>
-            <input matInput formControlName="balance" type="number" />
+            <input matInput formControlName="balance" type="text" />
         </mat-form-field>
         <div>
             <ng-container *ngIf="
