--- a/frontend/src/app/layout/customers/tier/tier.component.html
+++ b/frontend/src/app/layout/customers/tier/tier.component.html
@@ -1,64 +1,67 @@
 <div>
-    <div>
-        <h1 mat-dialog-title>Tier</h1>
+    <h1 mat-dialog-title><b>Tier</b></h1>
+</div>
+<mat-divider></mat-divider>
+<br>
+<mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
+<div class="header">
+    <mat-form-field>
+        <mat-label>Search...</mat-label>
+        <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getTier()">
+    </mat-form-field>
+    <button color="primary" class="margin" mat-raised-button (click)="getTier()">
+        Search
+    </button>
 
-    </div>
-    <mat-divider></mat-divider>
-    <br>
-    <mat-spinner *ngIf="loader" class="loader" diameter="40"></mat-spinner>
-    <div class="header">
-        <mat-form-field>
-            <mat-label>Search...</mat-label>
-            <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getTier()">
-        </mat-form-field>
-        <button color="primary" class="margin" mat-raised-button (click)="getTier()">
-            Search
-        </button>
+    <button color="primary" mat-raised-button (click)="onAddNewTier()">
+        Add Tier
+    </button>
 
-        <button color="primary" mat-raised-button (click)="onAddNewTier()">
-            Add Tier
-        </button>
-    </div>
+    <span class="active">
+        <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
+        </mat-slide-toggle>
+    </span>
+</div>
 
-    <div class="mat-elevation-z8">
+<div class="mat-elevation-z8">
 
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="code"
-            matSortDirection="asc">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="code"
+        matSortDirection="asc">
 
-            <ng-container matColumnDef="code">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.code }}
-                </td>
-            </ng-container>
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.code }}
+            </td>
+        </ng-container>
 
 
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.name }}
-                </td>
-            </ng-container>
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.name }}
+            </td>
+        </ng-container>
 
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>Actions</th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                        (click)="onEditNewTier(element)">
-                        <mat-icon aria-label="Edit">edit</mat-icon>
-                    </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
-                        (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
-                    </button>
-                </td>
-            </ng-container>
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                    type="button" (click)="onEditNewTier(element)">
+                    <mat-icon aria-label="Edit">edit</mat-icon>
+                </button>
+                <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                    color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
+                </button>
+            </td>
+        </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
-        </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+    </table>
 
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
-            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
-        </mat-paginator>
-    </div>
+    <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+        (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+    </mat-paginator>
+</div>
