--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -9,9 +9,9 @@
             <button color="primary" class="margin" mat-raised-button (click)="getItems()">
                 Search
             </button>
-            <!-- <button color="primary" class="margin" mat-raised-button (click)="onAddNewCdf()">
+            <button color="primary" class="margin" mat-raised-button (click)="onAddNewCdf()">
                 Add CDF
-            </button> -->
+            </button>
 
         </div>
         <div>
