--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -56,7 +56,7 @@
             </ng-container>
 
             <ng-container matColumnDef="sold">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>sold /th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Sold </th>
                     <td mat-cell *matCellDef="let element">
                         {{ element.sold }}
                     </td>
