--- a/frontend/src/app/layout/sales/sales.component.html
+++ b/frontend/src/app/layout/sales/sales.component.html
@@ -101,11 +101,13 @@
                 </td>
             </ng-container>
 
+
+
             <ng-container matColumnDef="print">
                 <th mat-header-cell *matHeaderCellDef>Print</th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button" (click)="onEditNewCustomers(element)">
-                        <mat-icon  aria-label="PRINT" color="primary">print</mat-icon>
+                        <mat-icon  aria-label="print" color="primary">print</mat-icon>
                     </button>
 
                 </td>
