--- a/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
+++ b/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
@@ -51,10 +51,11 @@
         </mat-form-field>
 
         <div class="btn-update">
-            <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
-        <span>
-          {{ !this.data ? 'Save' : 'Update' }}
+            <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader" type="submit">
+        <span *ngIf="!isShowLoader">
+            {{ !this.data ? 'Save' : 'Update' }}
         </span>
+        <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
       </button>
         </div>
     </form>
