--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -56,11 +56,11 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewUser(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}" color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
                 </td>
             </ng-container>
