--- a/frontend/src/app/layout/expense/add-expense/add-expense.component.html
+++ b/frontend/src/app/layout/expense/add-expense/add-expense.component.html
@@ -42,7 +42,7 @@
             </ng-container>
         </div>
 
-        <!-- Amount start -->
+        <!-- user start -->
         <mat-form-field>
             <mat-label>User To</mat-label>
             <mat-select formControlName="user" name="user">
