--- a/frontend/src/app/layout/expense/cateogry/category.component.html
+++ b/frontend/src/app/layout/expense/cateogry/category.component.html
@@ -30,6 +30,7 @@
         matSortDirection="asc">
         *ngIf="!loader"
 
+        <!-- code start -->
         <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
             <td mat-cell *matCellDef="let element">
@@ -38,12 +39,15 @@
         </ng-container>
 
 
+        <!-- name start -->
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.name }}
             </td>
         </ng-container>
+
+        <!-- action start -->
 
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
@@ -59,7 +63,7 @@
             </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns">   </tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"> </tr>
         <tr mat-row *matRowDef="let element; columns: displayedColumns"> </tr>
 
     </table>
