--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -7,15 +7,15 @@
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
             </mat-form-field>
             <button color="primary" class="margin" mat-raised-button (click)="getItems()">
-            Search
-        </button>
+                Search
+            </button>
 
-        <button color="primary"  class="margin" mat-raised-button (click)="onAddNewItem()">
-            Add Item
-        </button>
-        <button color="primary"  class="margin" mat-raised-button (click)="openItemsCategory()">
-            Categories
-          </button>
+            <button color="primary" class="margin" mat-raised-button (click)="onAddNewItem()">
+                Add Item
+            </button>
+            <button color="primary" class="margin" mat-raised-button (click)="openItemsCategory()">
+                Add Categories
+            </button>
 
         </div>
         <div>
@@ -25,7 +25,8 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
 
             <ng-container matColumnDef="code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
@@ -57,9 +58,9 @@
 
             <ng-container matColumnDef="sold">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Sold </th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.sold }}
-                    </td>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.sold }}
+                </td>
             </ng-container>
 
             <ng-container matColumnDef="available">
@@ -85,10 +86,12 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
                     </button>
                 </td>
@@ -98,7 +101,8 @@
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
