--- a/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
+++ b/frontend/src/app/layout/transfer/add-transfer/add-transfer.component.html
@@ -40,7 +40,7 @@
             </ng-container>
         </div>
 
-        <!-- Amount start -->
+        <!-- user start -->
         <mat-form-field>
             <mat-label>User To</mat-label>
             <mat-select formControlName="user" name="user">
@@ -52,11 +52,11 @@
 
         <div class="btn-update">
             <button mat-raised-button color="primary" [disabled]="!formGroup.valid || isShowLoader" type="submit">
-        <span *ngIf="!isShowLoader">
-            {{ !this.data ? 'Save' : 'Update' }}
-        </span>
-        <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
-      </button>
+                <span *ngIf="!isShowLoader">
+                    {{ !this.data ? 'Save' : 'Update' }}
+                </span>
+                <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
+            </button>
         </div>
     </form>
 </div>
