--- a/frontend/src/app/layout/expense/expense.component.html
+++ b/frontend/src/app/layout/expense/expense.component.html
@@ -14,7 +14,7 @@
                 Add Expense
             </button>
             <button color="primary" class="margin" mat-raised-button (click)="openCategory()">
-               Add Category
+                Add Category
             </button>
 
         </div>
@@ -24,11 +24,12 @@
         </div>
     </div>
     <br />
-  </div>
+</div>
 
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id" matSortDirection="asc">
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id"
+        matSortDirection="asc">
 
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
@@ -37,7 +38,7 @@
             </td>
         </ng-container>
 
-               <ng-container matColumnDef="date">
+        <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.date }}
@@ -51,10 +52,10 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="name">
+        <ng-container matColumnDef="code">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
             <td mat-cell *matCellDef="let element">
-                {{ element.name }}
+                {{ element.code }}
             </td>
         </ng-container>
 
@@ -63,20 +64,22 @@
             <td mat-cell *matCellDef="let element">{{ element.amount | currency: 'INR' }}</td>
         </ng-container>
 
-            <ng-container matColumnDef="user_name">
+        <ng-container matColumnDef="user_name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
-            <td mat-cell *matCellDef="let element">{{ element.user_name  }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.user_name }}</td>
         </ng-container>
 
 
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Actions</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                    type="button" (click)=" onEditNewExpense(element)">
                     <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
-                <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
-                    <mat-icon aria-label="Delete">delete</mat-icon>
+                <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                    color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                 </button>
             </td>
         </ng-container>
@@ -84,8 +87,9 @@
         <ng-container matColumnDef="print">
             <th mat-header-cell *matHeaderCellDef>Print</th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button" (click)="onEditNewExpense(element)">
-                    <mat-icon  aria-label="PRINT" color="primary">print</mat-icon>
+                <button mat-icon-button matTooltip="Click to PRINT" color="primary" type="button"
+                    (click)="onEditNewExpense(element)">
+                    <mat-icon aria-label="PRINT" color="primary">print</mat-icon>
                 </button>
 
             </td>
@@ -95,6 +99,7 @@
         <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
     </table>
 
-    <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+    <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+        (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
     </mat-paginator>
 </div>
