--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -6,6 +6,17 @@
                 <mat-label>Search...</mat-label>
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
             </mat-form-field>
+               <!-- category start -->
+               <mat-form-field class="margin">
+                <mat-label>Select Tier</mat-label>
+                <mat-select formControlName="tier" name="tier">
+                    <mat-option *ngFor="let tire of tires" [value]="tire.id">
+                        {{tire.name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+
             <button color="primary" class="margin" mat-raised-button (click)="getItems()">
                 Search
             </button>
