--- a/frontend/src/app/layout/expense/add-expense/add-expense.component.html
+++ b/frontend/src/app/layout/expense/add-expense/add-expense.component.html
@@ -1,4 +1,3 @@
-
 <!--  -->
 <div class="container">
     <h1 mat-dialog-title> {{ !this.data ? 'Add Expense' : 'Update Expense' }} </h1>
@@ -27,12 +26,12 @@
             </ng-container>
         </div>
 
-          <!-- Category start -->
-          <mat-form-field>
+        <!-- Category start -->
+        <mat-form-field>
             <mat-label>Category</mat-label>
             <mat-select formControlName="user" name="user">
                 <mat-option *ngFor="let category of categories" [value]="category.id">
-                    {{category.name}}
+                    {{category.code}}
                 </mat-option>
             </mat-select>
         </mat-form-field>
@@ -66,10 +65,10 @@
 
         <div class="btn-update">
             <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
-        <span>
-          {{ !this.data ? 'Save' : 'Update' }}
-        </span>
-      </button>
+                <span>
+                    {{ !this.data ? 'Save' : 'Update' }}
+                </span>
+            </button>
         </div>
     </form>
 </div>
