--- a/frontend/src/app/layout/items/add-item/add-item.component.scss
+++ b/frontend/src/app/layout/items/add-item/add-item.component.scss
@@ -13,3 +13,18 @@
         width: 100%;
     }
 }
+table {
+    width: 100%;
+}
+
+th {
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+}
+
+td {
+    color: rgb(73 70 70 / 87%);
+}
+.mat-divider{
+    border-color: black;
+}
