--- a/frontend/src/app/layout/items/add-item/add-item.component.html
+++ b/frontend/src/app/layout/items/add-item/add-item.component.html
@@ -164,3 +164,89 @@
         </div>
     </form>
 </div>
+<!--  -->
+<br>
+<mat-divider class="mat-divider"></mat-divider>
+<br>
+<h1 mat-dialog-title>Supplier Details</h1>
+
+<div class="container">
+
+    <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+
+
+        <!--Name start -->
+        <mat-form-field>
+            <mat-label>Name</mat-label>
+            <input matInput formControlName="name" />
+        </mat-form-field>
+        <div>
+            <ng-container *ngIf="
+          formGroup.controls.name.touched &&
+          !formGroup.controls.name.value
+        ">
+                <span class="error">Name is Required</span>
+            </ng-container>
+        </div>
+
+        <!-- Init Qty start -->
+        <mat-form-field>
+            <mat-label>Qty</mat-label>
+            <input matInput formControlName="qty" type="number" />
+        </mat-form-field>
+        <div>
+            <ng-container *ngIf="
+          formGroup.controls.qty.touched &&
+          !formGroup.controls.qty.value
+        ">
+                <span class="error">Qty is Required</span>
+            </ng-container>
+        </div>
+
+        <div class="btn-update">
+            <button mat-raised-button color="primary" type="submit">
+                <span *ngIf="!isShowLoader">
+
+                    ADD
+                </span>
+                <mat-spinner *ngIf="isShowLoader" class="inline-loader" diameter="20"></mat-spinner>
+            </button>
+        </div>
+
+    </form>
+</div>
+    <br>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort matSortActive="company" matSortDirection="asc">
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.name }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="qty">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Int.Qty</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.qty }}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef>Actions</th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
+                        <mat-icon aria-label="Edit">edit</mat-icon>
+                    </button>
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
+                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+        </table>
+    </div>
