--- a/frontend/src/app/layout/items/add-item/add-item.component.scss
+++ b/frontend/src/app/layout/items/add-item/add-item.component.scss
@@ -1,30 +1,39 @@
-
 .container {
-    .mat-form-field {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-    .mat-dialog-title {
-        margin: 0 0 20px;
-        display: block;
-    }
-    .input {
-        width: 100%;
-    }
+  .mat-form-field {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .mat-dialog-title {
+    margin: 0 0 20px;
+    display: block;
+  }
+  .input {
+    width: 100%;
+  }
 }
 table {
-    width: 100%;
+  width: 100%;
 }
 
 th {
-    color: rgb(0, 0, 0);
-    font-size: 16px;
+  color: rgb(0, 0, 0);
+  font-size: 16px;
 }
 
 td {
-    color: rgb(73 70 70 / 87%);
+  color: rgb(73 70 70 / 87%);
 }
-.mat-divider{
-    border-color: black;
+.mat-divider {
+  border-color: black;
+}
+.supplier_details_table {
+  display: flex;
+  .error_text{
+display: block;
+  }
+  .input_width {
+    width: 127px;
+    margin: 0 10px;
+  }
 }
