--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -28,17 +28,17 @@
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
             matSortDirection="asc">
 
-            <ng-container matColumnDef="code">
+            <ng-container matColumnDef="item_code">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Code</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.code }}
+                    {{ element.item_code }}
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="name">
+            <ng-container matColumnDef="item_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.name }}
+                    {{ element.item_name }}
                 </td>
             </ng-container>
 
@@ -70,10 +70,10 @@
                 </td>
             </ng-container>
 
-            <ng-container matColumnDef="sliver_price">
+            <ng-container matColumnDef="silver">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Sliver Price</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.sliver_price | currency: 'INR' }}
+                    {{ element.silver | currency: 'INR' }}
                 </td>
             </ng-container>
 
@@ -86,13 +86,13 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                        (click)="onEditNewCustomers(element)">
+                    <button  *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewItem(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
-                        (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                    color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
                 </td>
             </ng-container>
