create quotation added

--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -21,6 +21,10 @@
                 Search
             </button>
 
+            <button color="primary" class="margin" mat-raised-button (click)="onAddNewCreateQuotation()">
+                Add Create Qutation
+            </button>
+
         </div>
         <div>
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
