--- a/frontend/src/app/layout/items/add-item/add-item.component.scss
+++ b/frontend/src/app/layout/items/add-item/add-item.component.scss
@@ -1,39 +1,70 @@
-.container {
-  .mat-form-field {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  .mat-dialog-title {
-    margin: 0 0 20px;
-    display: block;
-  }
-  .input {
-    width: 100%;
-  }
-}
+// .container {
+//   .mat-form-field {
+//     width: 100%;
+//     display: flex;
+//     flex-direction: column;
+//   }
+//   .mat-dialog-title {
+//     margin: 0 0 20px;
+//     display: block;
+//   }
+//   .input {
+//     width: 100%;
+//   }
+// }
 table {
   width: 100%;
+
 }
 
-th {
-  color: rgb(0, 0, 0);
-  font-size: 16px;
-}
+// th {
+//   color: rgb(0, 0, 0);
+//   font-size: 16px;
+// }
 
-td {
-  color: rgb(73 70 70 / 87%);
-}
-.mat-divider {
-  border-color: black;
-}
-.supplier_details_table {
-  display: flex;
-  .error_text{
-display: block;
-  }
-  .input_width {
-    width: 127px;
-    margin: 0 10px;
-  }
+// td {
+//   color: rgb(73 70 70 / 87%);
+// }
+// .mat-divider {
+//   border-color: black;
+// }
+// .supplier_details_table {
+// display: inline-flex;
+//   width: 100%;
+//   justify-content: space-between;
+//   .error_text{
+// display: block;
+//   }
+//   .input_width {
+//     width: 320px;
+//     margin: 0 10px 0 0;
+//   }
+//   .add_button {
+//     height: 35px;
+//     width: 90px;
+//     margin-top: 10px;
+
+//   }
+// }
+
+// .example-container .mat-form-field + .mat-form-field {
+//     margin-left: 8px;
+//   }
+
+//   .example-right-align {
+//     text-align: right;
+//   }
+
+//   input.example-right-align::-webkit-outer-spin-button,
+//   input.example-right-align::-webkit-inner-spin-button {
+//     display: none;
+//   }
+
+//   input.example-right-align {
+//     -moz-appearance: textfield;
+//   }
+
+mat-form-field{
+    margin-right:25px ;
+    margin-left:25px ;
 }
