--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
@@ -1,5 +1,7 @@
 <div class="container">
     <h1 mat-dialog-title> {{ !this.data ? 'Add Create Quotation' : 'Update Create Quotation' }} </h1>
+    <mat-divider></mat-divider>
+    <br>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
         <div class="box">
             <!-- tier start -->
@@ -21,7 +23,7 @@
             <!-- invoice_number start -->
             <div class="width">
                 <mat-form-field>
-                    <mat-label>Invoice Number</mat-label>
+                    <mat-label>Invoice No.</mat-label>
                     <input matInput formControlName="invoice_number" type="number" />
                 </mat-form-field>
             </div>
@@ -32,7 +34,7 @@
                     <input matInput formControlName="ref_number" type="number" />
                 </mat-form-field>
             </div>
-            <!-- button start -->
+            <!-- buttons start -->
             <div>
                 <button mat-raised-button color="primary" class="margin" type="submit">
                     Download
@@ -45,21 +47,19 @@
             </div>
         </div>
         <mat-divider></mat-divider>
+        <br>
         <!-- Item Name start -->
-        <mat-form-field>
-            <mat-label>Item Name</mat-label>
-            <input matInput formControlName="item_name" />
-        </mat-form-field>
-        <div>
-            <ng-container *ngIf="
-        formGroup.controls.item_name.touched &&
-        !formGroup.controls.item_name.value
-      ">
-                <span class="error">Item Name is Required</span>
-            </ng-container>
-        </div>
-        <!-- Category start -->
-        <!-- <mat-form-field>
+        <div class="box">
+            <div class="width">
+
+                <mat-form-field>
+                    <mat-label>Item Name</mat-label>
+                    <input matInput formControlName="item_name" />
+                </mat-form-field>
+
+            </div>
+            <!-- Category start -->
+            <!-- <mat-form-field>
             <mat-label>Category</mat-label>
             <mat-select formControlName="user" name="user">
                 <mat-option *ngFor="let category of categories" [value]="category.id">
@@ -67,44 +67,109 @@
                 </mat-option>
             </mat-select>
         </mat-form-field> -->
-        <!-- hashtag start -->
-        <mat-form-field>
-            <mat-label>#</mat-label>
-            <input matInput formControlName="hashtag" />
-        </mat-form-field>
-        <!-- Qty start -->
-        <mat-form-field>
-            <mat-label>Qty</mat-label>
-            <input matInput formControlName="qty" type="number" />
-        </mat-form-field>
-        <!-- Available start -->
-        <mat-form-field>
-            <mat-label>Available</mat-label>
-            <input matInput formControlName="available" />
-        </mat-form-field>
-        <!-- Selling price start -->
-        <mat-form-field>
-            <mat-label>Selling price</mat-label>
-            <input matInput formControlName="selling_price" type="number" />
-        </mat-form-field>
-        <!-- total price start -->
-        <mat-form-field>
-            <mat-label>Total</mat-label>
-            <input matInput formControlName="total" />
-        </mat-form-field>
-        <!-- Add button start -->
-        <button mat-raised-button color="primary" class="margin" type="submit">
-            Add
-        </button>
+            <!-- hashtag start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>#</mat-label>
+                    <input matInput formControlName="hashtag" />
+                </mat-form-field>
+            </div>
+            <!-- Qty start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Qty</mat-label>
+                    <input matInput formControlName="qty" type="number" />
+                </mat-form-field>
+            </div>
+            <!-- Available start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Available</mat-label>
+                    <input matInput formControlName="available" />
+                </mat-form-field>
+            </div>
 
+
+            <!-- Selling price start -->
+            <div class="width">
+                <mat-form-field>
+                    <mat-label>Selling price</mat-label>
+                    <input matInput formControlName="selling_price" type="number" />
+                </mat-form-field>
+
+            </div>
+            <!-- total price start -->
+            <div class="width">
+
+                <mat-form-field>
+                    <mat-label>Total</mat-label>
+                    <input matInput formControlName="total" />
+                </mat-form-field>
+            </div>
+            <!-- Add button start -->
+            <div>
+
+                <button mat-raised-button color="primary" class="margin" type="submit">
+                    Add
+                </button>
+            </div>
+        </div>
         <!-- button start -->
 
-        <div class="btn-update">
-            <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
-                <span>
-                    {{ !this.data ? 'Save & Back' : 'Update' }}
-                </span>
-            </button>
-        </div>
     </form>
+</div>
+<mat-divider></mat-divider>
+<br>
+
+<!-- table start -->
+
+<div class="mat-elevation-z8">
+    <table mat-table matSort matSortActive="item_name" matSortDirection="asc">
+
+        <ng-container matColumnDef="item_name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Item Name</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.item_name}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="qty">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Qty</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.qty }}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="edit_delete">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Edit/Delete</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.edit_delete }}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="price">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.price}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="total">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
+            <td mat-cell *matCellDef="let element">{{ element.total}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+    </table>
+
+</div>
+<br>
+
+<div class="btn-update">
+    <button mat-raised-button color="primary" [disabled]="!formGroup.valid" type="submit">
+        <span>
+            {{ !this.data ? 'Save & Back' : 'Update' }}
+        </span>
+    </button>
 </div>
