--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.scss
@@ -4,22 +4,40 @@
         display: flex;
         flex-direction: column;
     }
+
     .mat-dialog-title {
         margin: 0 0 20px;
         display: block;
     }
+
     .input {
         width: 100%;
     }
+
     .margin {
         margin-right: 10px;
     }
+
     .box {
         display: flex;
+
         .width {
-            width: 170px;
+            width: 125px;
             margin-right: 20px;
 
         }
     }
+}
+
+table {
+    width: 100%;
+}
+
+th {
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+}
+
+td {
+    color: rgb(73 70 70 / 87%);
 }
