item api mainor change

--- a/frontend/src/app/layout/items/add-item/add-item.component.html
+++ b/frontend/src/app/layout/items/add-item/add-item.component.html
@@ -171,7 +171,20 @@
 <h1 mat-dialog-title>Supplier Details</h1>
 <form [formGroup]="formSupplier" (ngSubmit)="addSupplier()">
     <div class="supplier_details_table">
+        <div class="block">
+            <mat-form-field>
+                <mat-label>Category</mat-label>
+                <mat-select formControlName="supplier" name="supplier">
+                    <mat-option *ngFor="let supplier of supplier" [value]="supplier.id">
+                        {{supplier.company}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+
+        </div>
         <!-- name start -->
+
+        <!--
         <div class="block">
             <mat-form-field class="input_width">
                 <mat-label>Name</mat-label>
@@ -185,7 +198,7 @@
                     <span class="error">Name is Required</span>
                 </ng-container>
             </div>
-        </div>
+        </div> -->
         <!-- Qty start -->
         <div class="block">
             <mat-form-field>
@@ -219,7 +232,7 @@
             </div>
         </div>
         <!-- ADD BUTTON -->
-        <button mat-raised-button color="primary" class="add_button"  type="submit" [disabled]="!formSupplier.valid" > Add
+        <button mat-raised-button color="primary" class="add_button" type="submit" [disabled]="!formSupplier.valid"> Add
 
         </button>
     </div>
